--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
           <img src="shopping-cart-solid.svg" class="cart-icon">
           <span id="cart-num">0</span>
         </nav>
+
+        <div class="cart container" id="cart">
+        </div>
+
         <div class="row" id="beers"></div>
     </div>
 
